# cardinal.py

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  config.json.example  pyproject.toml  requirements.txt  run_cardinal.py  setup.py  tox.ini  upgrade_db.py
.travis/: dockerhub-trigger.sh
docker/: apk-build.txt  entrypoint.sh
src/: __main__.py  initdatabase.py
src/cardinal/: __init__.py  bot.py  checks.py  config.py  container.py  context.py  errors.py  utils.py
src/cardinal/cogs/: __init__.py  anilist.py  basecog.py  botadmin.py  channels.py  jisho.py  moderation.py  mute.py  newbie.py  notifications.py  roles.py  saucenao.py  stop.py  whitelist.py
src/cardinal/commands/: __init__.py  channels.py  moderation.py  newbie.py  roles.py  utils.py  whitelist.py
src/cardinal/commands/channels/: __init__.py  models.py  utils.py
src/cardinal/commands/roles/: __init__.py  models.py
src/cardinal/commands/whitelist/: __init__.py  models.py  utils.py
src/cardinal/db/: __init__.py  base.py  channels.py  mute.py  newbie.py  notifications.py  roles.py  whitelist.py
src/cardinal/db/migrations/: alembic.ini  env.py
src/cardinal/db/migrations/versions/: 0002ca860468_initial_revision.py  25d0f68d0698_role_id_should_be_unique.py  313ce21eb461_add_tables_for_db_based_muting.py  52d93745fa71_index_muted_until_column_for_use_in_.py  d3915e15063e_add_notifications_table.py  dc0db050f230_add_check_constraint_to_ensure_channel_.py
test/test_cardinal/: __init__.py  test___init__.py  test_checks.py  test_context.py  test_errors.py  test_utils.py
test/test_cardinal/test_db/: test___init__.py
tests/test_cardinal/: __init__.py  conftest.py  test_bot.py  test_cardinal__init__.py  test_checks.py  test_container.py  test_context.py  test_errors.py  test_utils.py
tests/test_cardinal/test_cogs/: test_basecog.py  test_cogs__init__.py  test_commands__init__.py
tests/test_cardinal/test_commands/: test_commands__init__.py
tests/test_cardinal/test_db/: __init__.py  test_db__init__.py
