[tool.poetry]
name = "cardinal.py"
version = "3.1.0"
description = "A growing bot for managing a Discord server"
authors = ["FallenWarrior2k <mail@fallenwarrior.me>"]
license = "MIT"
packages = [
    { include = "cardinal", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5"
SQLAlchemy = "^1.3"
alembic = "^1.6.2"
dependency-injector = "^4.32.2"
aioitertools = "^0.7"
markdownify = "^0.7.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"

[tool.isort]
skip = ["migrations"]
line_length = 100
multi_line_output = 5
balanced_wrapping = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
