[tool.poetry]
name = "cardinal.py"
version = "3.1.0"
description = "A growing bot for managing a Discord server"
authors = ["FallenWarrior2k <mail@fallenwarrior.me>"]
license = "MIT"
packages = [
    { include = "cardinal", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5"
SQLAlchemy = "^1.3"
alembic = "^1.6.2"
dependency-injector = "^4.32.2"
aioitertools = "^0.7"
markdownify = "^0.7.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.1"
flakehell = "^0.8"
flake8-bugbear = "^21.4.3"
flake8-mutable = "^1.2.0"
flake8-pep3101 = "^1.3.0"
pep8-naming = "^0.11.1"

[tool.flakehell]
max_line_length = 100
max_complexity = 10
show_source = true

exclude = ["migrations"]

# Workaround for flakehell/flakehell#10
extended_default_ignore = []

[tool.flakehell.plugins]
# E722: Covered by B001 (flake8-bugbear)
pycodestyle = ["+*", "-E722"]
pyflakes = ["+*"]
mccabe = ["+*"]
# B901: Forbid return in generators (disagree)
flake8-bugbear = ["+*", "-B901"]
flake8-mutable = ["+*"]
flake8-pep3101 = ["+*"]
pep8-naming = ["+*"]

[tool.isort]
skip = ["migrations"]
line_length = 100
multi_line_output = 5
balanced_wrapping = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
